<resources>
    <string name="app_name">ShopApp</string>
    <string name="email">Email</string>
    <string name="password">Lozinka</string>
    <string name="register_account">Nemate nalog? Registrujte se!</string>
    <string name="login">Prijava</string>
    <string name="no_account">Nemate nalog?</string>
    <string name="register">Registrujte se</string>
    <string name="empty_email">Email je obavezan!</string>
    <string name="empty_password">Lozinka je obavezna!</string>
    <string name="email_not_valid">Pogrešan format za email!</string>
    <string name="name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="address">Adresa</string>
    <string name="confirm_password">Potvrda lozinke</string>
    <string name="register_title">Registracija</string>
    <string name="login_title">Prijava</string>
    <string name="empty_name">Ime je obavezno!</string>
    <string name="empty_last_name">Prezime je obavezno</string>
    <string name="empty_address">Adresa je obavezna!</string>
    <string name="empty_confirm_password">Potvrda lozinke je obavezna</string>
    <string name="short_password">Lozinka mora sadržati najmanje 6 karaktera!</string>
    <string name="confirm_password_not_match">Lozinke se ne podudaraju!</string>
    <string name="cart">Korpa</string>
    <string name="shopping">Kupovina</string>
    <string name="overview">Pregled</string>
    <string name="orders">Porudžbine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Dodaj u korpu</string>
    <string name="order">Poruči</string>
    <string name="payment_method">Način plaćanja</string>
</resources>