<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    tools:context=".activity.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/address"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        app:hintTextColor="@color/orange"   >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        app:hintTextColor="@color/orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register" />

</LinearLayout>